dataset/contracts/failed_build/Decentralized_Autonomous_Organization_(DAO)_Governance_Token_0.txt
 [1/*] Building cargo project
[1m[32m   Compiling[0m Lending v0.1.0 (/tmp/cargo-contract_MspNI0)
[1m[36m    Building[0m [=======================> ] 124/125: Lending(bin)                                    
[K[0m[1m[38;5;9merror[E0277][0m[0m[1m: the trait bound `ink::ink_primitives::AccountId: Default` is not satisfied[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0m/workspaces/ink-jet/dataset/Test-Cargo/lib.rs:14:9[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m9[0m[0m  [0m[0m[1m[38;5;12m|[0m[0m [0m[0m    #[derive(Default)][0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m             [0m[0m[1m[38;5;12m-------[0m[0m [0m[0m[1m[38;5;12min this derive macro expansion[0m
[0m[1m[38;5;12m...[0m
[0m[1m[38;5;12m14[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m        owner: AccountId,[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m        [0m[0m[1m[38;5;9m^^^^^^^^^^^^^^^^[0m[0m [0m[0m[1m[38;5;9mthe trait `Default` is not implemented for `ink::ink_primitives::AccountId`[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)[0m

[1m[36m    Building[0m [=======================> ] 124/125: Lending(bin)                                    
[K[0m[1mFor more information about this error, try `rustc --explain E0277`.[0m
[1m[36m    Building[0m [=======================> ] 124/125: Lending(bin)                                    
[K[1m[31merror[0m[1m:[0m could not compile `Lending` (bin "Lending") due to preERROR: command ["/home/codespace/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo", "build", "--color=always", "--target=wasm32-unknown-unknown", "-Zbuild-std=core,alloc", "--no-default-features", "--release", "--target-dir=/workspaces/ink-jet/dataset/Test-Cargo/target/ink", "--features", "ink/ink-debug"] exited with code 101
